<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash.Splash">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="3dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                >





    <ImageView
        android:layout_width="220dp"
        android:layout_height="90dp"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:src="@drawable/login_logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="65dp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="4dp"
        card_view:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="176dp"
        android:layout_marginLeft="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    >


                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/actihygiene"
                    android:textAllCaps="true"
                    android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.9"
                android:layout_marginBottom="10dp"
                >


            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="15dp"
                android:padding="4dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/username"
                tools:ignore="RtlCompat"
                android:layout_marginTop="2dp"
                android:textColorHint="@color/gray_balck"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:drawablePadding="10dp"
                android:singleLine="true"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPassword"
                android:textSize="15dp"
                android:layout_marginTop="5dp"
                android:hint="@string/Password"
                android:drawableStart="@drawable/lock"
                tools:ignore="RtlCompat"
                android:textColorHint="@color/gray_balck"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:singleLine="true"
                />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.9"
                android:layout_marginTop="15dp"
                >


            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shap_round_color"
                android:text="@string/login"
                android:id="@+id/btnlogin"
                android:textColor="@color/white"

                />


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/txtforgetpassword"
                android:text="@string/forget_password"
                android:gravity="center"
                />

            </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_alignParentBottom="true">


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/copyrightmessage"
                android:textSize="11dp"
                android:layout_alignParentBottom="true"

                />

        </RelativeLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>







</android.support.constraint.ConstraintLayout>
